--- a/inv.yml
+++ b/inv.yml
@@ -1,7 +1,6 @@
 ---
 - hosts: localhost
-  vars:
-    13.233.93.98
+
   tasks:
     - name: Update Ansible Tower inventory
       uri:
@@ -9,7 +8,7 @@
        user: admin
        password: redhat
        method: POST
-       body: '{ "name" : "{{FQDN}}" }'
+       body: '{ "name" : "13.233.93.98" }'
        force_basic_auth: yes
        status_code: 201
        body_format: json
