--- a/inv.yml
+++ b/inv.yml
@@ -6,6 +6,7 @@
       uri:
        url: https://13.233.93.98/api/v2/inventories
        user: admin
+       password: "redhat"
        method: POST
        body: '{ "name" : "13.233.93.98", "organisation": "1"}'
        force_basic_auth: yes
