--- a/inv.yml
+++ b/inv.yml
@@ -9,7 +9,9 @@
        password: "redhat"
        method: POST
        body: '{ "name" : "localhost", "organisation": "1"}'
-       force_basic_auth: yes
-       status_code: 201
+       #force_basic_auth: yes
+       #status_code: 201
        body_format: json
        validate_certs: no
+              
+ 
