--- a/inv.yml
+++ b/inv.yml
@@ -4,13 +4,14 @@
   tasks:
     - name: Update Ansible Tower inventory
       uri:
-       url: https://13.233.93.98/api/v2/inventories
+       url: "13.233.93.98/api/v2/inventories"
        user: admin
        password: "redhat"
        method: POST
-       body: '{ "name" : "localhost", "organisation": "1"}'
-       #force_basic_auth: yes
-       #status_code: 201
+       return_content: yes
+       body: '{ "name" : "localhost", "organisation": 1}'
+       force_basic_auth: yes
+       status_code: 201,200,202
        body_format: json
        validate_certs: no
               
